k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iac-quality-gate-service
  labels:
    app: iac-quality-gate-app
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: iac-quality-gate-app
